force-app/main/default/objects/Visit__c/Visit__c.object-meta.xml
<CustomObject>
  <label>Visit</label>
  <pluralLabel>Visits</pluralLabel>
  <nameField>
    <label>Visit Name</label>
    <type>Text</type>
  </nameField>
  <sharingModel>ReadWrite</sharingModel>
</CustomObject>