force-app/main/default/objects/Visit__c/fields/CheckInLat__c.field-meta.xml
<CustomField>
  <fullName>CheckInLat__c</fullName>
  <label>Check In Latitude</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>10</scale>
</CustomField>