force-app/main/default/objects/Visit__c/fields/CheckInLng__c.field-meta.xml
<CustomField>
  <fullName>CheckInLng__c</fullName>
  <label>Check In Longitude</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>10</scale>
</CustomField>