force-app/main/default/objects/Visit__c/fields/CheckInTime__c.field-meta.xml
<CustomField>
  <fullName>CheckInTime__c</fullName>
  <label>Check In Time</label>
  <type>DateTime</type>
</CustomField>