force-app/main/default/objects/Visit__c/fields/CheckOutLat__c.field-meta.xml
<CustomField>
  <fullName>CheckOutLat__c</fullName>
  <label>Check Out Latitude</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>10</scale>
</CustomField>