force-app/main/default/objects/Visit__c/fields/CheckOutLng__c.field-meta.xml
<CustomField>
  <fullName>CheckOutLng__c</fullName>
  <label>Check Out Longitude</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>10</scale>
</CustomField>