force-app/main/default/objects/Visit__c/fields/CheckOutTime__c.field-meta.xml
<CustomField>
  <fullName>CheckOutTime__c</fullName>
  <label>Check Out Time</label>
  <type>DateTime</type>
</CustomField>