force-app/main/default/objects/Visit__c/fields/DistanceFromTargetM__c.field-meta.xml
<CustomField>
  <fullName>DistanceFromTargetM__c</fullName>
  <label>Distance From Target (m)</label>
  <type>Number</type>
  <precision>10</precision>
  <scale>2</scale>
</CustomField>