force-app/main/default/objects/Visit__c/fields/Exception__c.field-meta.xml
<CustomField>
  <fullName>Exception__c</fullName>
  <label>Exception</label>
  <type>LongTextArea</type>
  <length>32768</length>
</CustomField>