force-app/main/default/objects/Visit__c/fields/ExceptionReason__c.field-meta.xml
<CustomField>
  <fullName>ExceptionReason__c</fullName>
  <label>Exception Reason</label>
  <type>Text</type>
  <length>255</length>
</CustomField>