force-app/main/default/objects/Visit__c/fields/GpsStatus__c.field-meta.xml
    <CustomField>
      <fullName>GpsStatus__c</fullName>
      <label>GPS Status</label>
      <type>Picklist</type>
      <valueSet>
        <valueSetDefinition>
<value>
  <fullName>OK</fullName>
  <default>true</default>
  <label>OK</label>
</value>
<value>
  <fullName>Denied</fullName>
</value>
<value>
  <fullName>Unavailable</fullName>
</value>
<value>
  <fullName>Timeout</fullName>
</value>
        </valueSetDefinition>
      </valueSet>
    </CustomField>