force-app/main/default/objects/Visit__c/fields/PlannedEnd__c.field-meta.xml
<CustomField>
  <fullName>PlannedEnd__c</fullName>
  <label>Planned End</label>
  <type>DateTime</type>
</CustomField>