force-app/main/default/objects/Visit__c/fields/PlannedStart__c.field-meta.xml
<CustomField>
  <fullName>PlannedStart__c</fullName>
  <label>Planned Start</label>
  <type>DateTime</type>
</CustomField>