force-app/main/default/objects/Visit__c/fields/Status__c.field-meta.xml
    <CustomField>
      <fullName>Status__c</fullName>
      <label>Status</label>
      <type>Picklist</type>
      <valueSet>
        <valueSetDefinition>
<value>
  <fullName>Planned</fullName>
  <default>true</default>
  <label>Planned</label>
</value>
<value>
  <fullName>CheckedIn</fullName>
</value>
<value>
  <fullName>CheckedOut</fullName>
</value>
<value>
  <fullName>Skipped</fullName>
</value>
        </valueSetDefinition>
      </valueSet>
    </CustomField>