force-app/main/default/objects/Visit__c/fields/TargetLat__c.field-meta.xml
<CustomField>
  <fullName>TargetLat__c</fullName>
  <label>Target Latitude</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>10</scale>
</CustomField>