force-app/main/default/objects/Visit__c/fields/TargetLng__c.field-meta.xml
<CustomField>
  <fullName>TargetLng__c</fullName>
  <label>Target Longitude</label>
  <type>Number</type>
  <precision>18</precision>
  <scale>10</scale>
</CustomField>